--- a/scss/main/_project-cubes.scss
+++ b/scss/main/_project-cubes.scss
@@ -1,35 +1,113 @@
 @use 'sass:math';
 
-$cube-tranZ: math.div($cube-dim, 2) + 3;
+$cube-dim: 90px; 
+
+$cube-tranZ: math.div($cube-dim, 2); // + 3;
 
 $inner-cube-tranZ: math.div($cube-tranZ, 2);
 
-$rotate-x: 20;
-$rotate-y: 10;
-
 @keyframes cube-rotate{
-  50% {
-        transform: rotateX(#{$rotate-x}deg) rotateY(#{$rotate-y}deg);
+  0% {
+    transform: rotateX(0deg) rotateY(0deg);
   }
   100% {
-    transform: rotateX(-30deg) rotateY(-40deg);
+    transform: rotateX(360deg) rotateY(360deg);
   }
-}
-
-.project-grid * {
-  transform-style: preserve-3d;
 }
 
 .cube {
   display: flex;
-  position: relative;
+  position: absolute;
+  z-index: 1;
+  width: $cube-dim;
+  height: $cube-dim;
+  transform-style: preserve-3d;
+  transform: rotateX(-20deg) rotateY(-40deg);
+  animation: cube-rotate 40s linear infinite;
+  }
+
+.inner-face {
+    position: absolute;
+    top: 25%;
+    left: 25%;
+    width: 50%;
+    height: 50%;
+    border: 2px solid rgba(125, 249, 255, .5);
+    opacity: 1;
+}
+
+.cube-face {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 2px solid rgba(125, 249, 255, 1);
+}
+
+.cube-front {
+    transform: translateZ($cube-tranZ);
+}
+
+.cube-back {
+    transform: rotateY(180deg) translateZ($cube-tranZ);
+}
+
+.cube-bottom {
+    transform: rotateX(-90deg) translateZ($cube-tranZ);
+}
+
+.cube-top {
+    transform: rotateX(90deg) translateZ($cube-tranZ);
+}
+
+.cube-left {
+    transform: rotateY(-90deg) translateZ($cube-tranZ);
+}
+
+.cube-right {
+    transform: rotateY(90deg) translateZ($cube-tranZ);
+}
+
+// inner
+.inner-front {
+    transform: translateZ($inner-cube-tranZ);
+}
+
+.inner-back {
+    transform: rotateY(180deg) translateZ($inner-cube-tranZ);
+}
+
+.inner-bottom {
+    transform: rotateX(-90deg) translateZ($inner-cube-tranZ);
+}
+
+.inner-top {
+    transform: rotateX(90deg) translateZ($inner-cube-tranZ);
+}
+
+.inner-left {
+    transform: rotateY(-90deg) translateZ($inner-cube-tranZ);
+}
+
+.inner-right {
+    transform: rotateY(90deg) translateZ($inner-cube-tranZ);
+}
+
+/*
+
+.cube {
+  display: flex;
+  position: absolute;
+  z-index: 1;
   width: $cube-dim;
   height: $cube-dim;
   transform-style: preserve-3d;
   transform: rotateX(-30deg) rotateY(-40deg);
-  margin: 40px auto 60px;
-  animation: cube-rotate 30s infinite;
+  // margin: 40px auto 60px;
+  animation: cube-rotate 30s linear infinite;
   }
+
 
 .inner-face {
     position: absolute;
@@ -53,7 +131,7 @@ $rotate-y: 10;
 
 .cube-face {
     position: absolute;
-    display: flex; 
+    // display: flex; 
     top: 0;
     left: 0;
     width: 100%;
@@ -70,11 +148,6 @@ $rotate-y: 10;
         border-radius: 15%;
     }
 }
-
-// for experimental cube dragging
-// .project {
-//   position: absolute;
-// }
 
 .project-button {
   width: 100%;
@@ -215,3 +288,4 @@ $rotate-y: 10;
 
   }
 }
+*/
