--- a/css/styles.css
+++ b/css/styles.css
@@ -6,10 +6,8 @@
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 html {
-  line-height: 1.15;
-  /* 1 */
-  -webkit-text-size-adjust: 100%;
-  /* 2 */
+  line-height: 1.15; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 2 */
 }
 
 /* Sections
@@ -44,12 +42,9 @@ h1 {
  * 2. Show the overflow in Edge and IE.
  */
 hr {
-  box-sizing: content-box;
-  /* 1 */
-  height: 0;
-  /* 1 */
-  overflow: visible;
-  /* 2 */
+  box-sizing: content-box; /* 1 */
+  height: 0; /* 1 */
+  overflow: visible; /* 2 */
 }
 
 /**
@@ -57,10 +52,8 @@ hr {
  * 2. Correct the odd `em` font sizing in all browsers.
  */
 pre {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
 }
 
 /* Text-level semantics
@@ -77,12 +70,9 @@ a {
  * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
  */
 abbr[title] {
-  border-bottom: none;
-  /* 1 */
-  text-decoration: underline;
-  /* 2 */
-  text-decoration: underline dotted;
-  /* 2 */
+  border-bottom: none; /* 1 */
+  text-decoration: underline; /* 2 */
+  text-decoration: underline dotted; /* 2 */
 }
 
 /**
@@ -100,10 +90,8 @@ strong {
 code,
 kbd,
 samp {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
 }
 
 /**
@@ -153,14 +141,10 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: inherit;
-  /* 1 */
-  font-size: 100%;
-  /* 1 */
-  line-height: 1.15;
-  /* 1 */
-  margin: 0;
-  /* 2 */
+  font-family: inherit; /* 1 */
+  font-size: 100%; /* 1 */
+  line-height: 1.15; /* 1 */
+  margin: 0; /* 2 */
 }
 
 /**
@@ -168,8 +152,7 @@ textarea {
  * 1. Show the overflow in Edge.
  */
 button,
-input {
-  /* 1 */
+input { /* 1 */
   overflow: visible;
 }
 
@@ -178,8 +161,7 @@ input {
  * 1. Remove the inheritance of text transform in Firefox.
  */
 button,
-select {
-  /* 1 */
+select { /* 1 */
   text-transform: none;
 }
 
@@ -228,18 +210,12 @@ fieldset {
  *    `fieldset` elements in all browsers.
  */
 legend {
-  box-sizing: border-box;
-  /* 1 */
-  color: inherit;
-  /* 2 */
-  display: table;
-  /* 1 */
-  max-width: 100%;
-  /* 1 */
-  padding: 0;
-  /* 3 */
-  white-space: normal;
-  /* 1 */
+  box-sizing: border-box; /* 1 */
+  color: inherit; /* 2 */
+  display: table; /* 1 */
+  max-width: 100%; /* 1 */
+  padding: 0; /* 3 */
+  white-space: normal; /* 1 */
 }
 
 /**
@@ -262,10 +238,8 @@ textarea {
  */
 [type=checkbox],
 [type=radio] {
-  box-sizing: border-box;
-  /* 1 */
-  padding: 0;
-  /* 2 */
+  box-sizing: border-box; /* 1 */
+  padding: 0; /* 2 */
 }
 
 /**
@@ -281,10 +255,8 @@ textarea {
  * 2. Correct the outline style in Safari.
  */
 [type=search] {
-  -webkit-appearance: textfield;
-  /* 1 */
-  outline-offset: -2px;
-  /* 2 */
+  -webkit-appearance: textfield; /* 1 */
+  outline-offset: -2px; /* 2 */
 }
 
 /**
@@ -299,10 +271,8 @@ textarea {
  * 2. Change font properties to `inherit` in Safari.
  */
 ::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  /* 1 */
-  font: inherit;
-  /* 2 */
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
 }
 
 /* Interactive
@@ -470,7 +440,7 @@ a {
   flex-direction: column;
   justify-content: space-between;
   height: 400px;
-  background: linear-gradient(90deg, #a2ffd1 0%, #83ffff 50%, #fab0ff 100%), url(../../img/profile-sm.jpg);
+  background: linear-gradient(90deg, rgb(162, 255, 209) 0%, rgb(131, 255, 255) 50%, rgb(250, 176, 255) 100%), url(../../img/profile-sm.jpg);
   background-blend-mode: overlay;
   background-size: cover;
   padding: 10px;
@@ -510,7 +480,7 @@ svg {
   transition: fill 0.5s linear;
 }
 svg:hover {
-  fill: white;
+  fill: rgb(255, 255, 255);
 }
 
 .github,
@@ -565,10 +535,10 @@ svg:hover {
 @media screen and (min-width: 1024px) {
   .my-card {
     grid-area: personal-card;
-    background: linear-gradient(90deg, #a2ffd1 0%, #83ffff 50%, #fab0ff 100%), url(../../img/profile-lg.jpg);
-    background-position-y: -300px;
+    background: linear-gradient(90deg, rgb(162, 255, 209) 0%, rgb(131, 255, 255) 50%, rgb(250, 176, 255) 100%), url(../../img/profile-lg.jpg);
+    background-position-y: -900px;
+    background-position-x: 650px;
   }
-
   .site-nav {
     justify-content: space-between;
   }
@@ -576,26 +546,21 @@ svg:hover {
     margin: 0;
     margin-right: 10px;
   }
-
   .lg-nav {
     width: 100%;
     justify-content: space-between;
   }
-
   .hide-lg {
     display: none;
   }
-
   .header {
     grid-area: showcase;
     margin-top: 1px;
     margin-bottom: 0px;
   }
-
   .project-grid {
     margin: 0;
   }
-
   .site-grid {
     display: grid;
     grid-template-columns: 200px 1fr;
@@ -604,11 +569,9 @@ svg:hover {
     grid-row-gap: 10px;
     grid-template-areas: "personal-card showcase" "personal-card site-nav" "personal-card projects";
   }
-
   .my-card {
     height: 100%;
   }
-
   .show-lg {
     display: flex;
     grid-area: site-nav;
@@ -667,7 +630,7 @@ svg:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  border: 2px solid #7df9ff;
+  border: 2px solid rgb(125, 249, 255);
 }
 .cube-face:before {
   content: "";
@@ -691,14 +654,14 @@ svg:hover {
   line-height: 1;
   margin: 0.5em;
   padding: 1em 2em;
-  color: #fab0ff;
+  color: rgb(250, 176, 255);
   transition: border-color 0.25s, box-shadow 0.25s, color 0.25s;
-  box-shadow: 0.3em 0.3em 0 0 #83ffff, inset 0.3em 0.3em 0 0 #83ffff;
+  box-shadow: 0.3em 0.3em 0 0 rgb(131, 255, 255), inset 0.3em 0.3em 0 0 rgb(131, 255, 255);
 }
 .project-button:hover, .project-button:focus {
-  border-color: #fab0ff;
+  border-color: rgb(250, 176, 255);
   color: white;
-  box-shadow: 0 0 0 0 #fab0ff, inset 6em 11em 0 0 #fab0ff;
+  box-shadow: 0 0 0 0 rgb(250, 176, 255), inset 6em 11em 0 0 rgb(250, 176, 255);
 }
 .project-button:hover .triangle, .project-button:focus .triangle {
   display: flex;
@@ -715,7 +678,7 @@ svg:hover {
   width: 0;
   height: 0;
   border-top: 5px solid transparent;
-  border-left: 10px solid #fab0ff;
+  border-left: 10px solid rgb(250, 176, 255);
   border-bottom: 5px solid transparent;
   margin-right: 2px;
 }
@@ -782,27 +745,21 @@ svg:hover {
     width: 160px;
     height: 160px;
   }
-
   .cube-front {
     transform: translateZ(83px);
   }
-
   .cube-back {
     transform: rotateY(180deg) translateZ(83px);
   }
-
   .cube-bottom {
     transform: rotateX(-90deg) translateZ(83px);
   }
-
   .cube-top {
     transform: rotateX(90deg) translateZ(83px);
   }
-
   .cube-left {
     transform: rotateY(-90deg) translateZ(83px);
   }
-
   .cube-right {
     transform: rotateY(90deg) translateZ(83px);
   }
@@ -860,7 +817,7 @@ svg:hover {
   left: 0;
   width: 190px;
   height: 190px;
-  border: 2px solid #7df9ff;
+  border: 2px solid rgb(125, 249, 255);
 }
 .archive-face:before {
   content: "";
@@ -881,7 +838,6 @@ svg:hover {
     padding: 10px;
     justify-items: center;
   }
-
   .selected {
     grid-column-start: span 2;
     display: flex;
@@ -911,8 +867,6 @@ svg:hover {
     max-height: 200px;
     margin-top: 20px;
   }
-}
-@media screen and (min-width: 768px) {
   .site-buttons {
     display: flex;
     flex-direction: column;
@@ -960,7 +914,7 @@ svg:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  border: 2px solid #7df9ff;
+  border: 2px solid rgb(125, 249, 255);
 }
 .archive-cube-face:before {
   content: "";
@@ -1070,9 +1024,9 @@ svg:hover {
   grid-area: socials;
   height: 100%;
   width: 100%;
-  border: 1px solid #a2ffd1;
-  border-top: 30px solid #a2ffd1;
-  background-color: #a2ffd1;
+  border: 1px solid rgb(162, 255, 209);
+  border-top: 30px solid rgb(162, 255, 209);
+  background-color: rgb(162, 255, 209);
 }
 
 .contact-info {
@@ -1159,17 +1113,17 @@ footer {
 }
 
 .block-one {
-  background-color: #a2ffd1;
+  background-color: rgb(162, 255, 209);
   width: 8px;
 }
 
 .block-two {
-  background-color: #83ffff;
+  background-color: rgb(131, 255, 255);
   width: 35px;
 }
 
 .block-three {
-  background-color: #fab0ff;
+  background-color: rgb(250, 176, 255);
   width: 45px;
 }
 
@@ -1190,30 +1144,25 @@ footer {
 
 @media screen and (min-width: 768px) {
   .block-one {
-    background-color: #a2ffd1;
+    background-color: rgb(162, 255, 209);
     width: 10px;
   }
-
   .block-two {
-    background-color: #83ffff;
+    background-color: rgb(131, 255, 255);
     width: 50px;
   }
-
   .block-three {
-    background-color: #fab0ff;
+    background-color: rgb(250, 176, 255);
     width: 100px;
   }
-
   .block-four {
     background-color: #404040;
     width: 25px;
   }
-
   .block-five {
     background-color: #121212;
     width: 100px;
   }
-
   .block-six {
     background-color: white;
     width: 25px;
