--- a/scss/main/_layout.scss
+++ b/scss/main/_layout.scss
@@ -134,7 +134,7 @@ a {
     justify-content: space-between;
     height: 400px; 
     background: linear-gradient(90deg, rgba(162,255,209,1) 0%, rgba(131,255,255,1) 50%, rgba(250,176,255,1) 100%), url(../../img/profile-sm.jpg);
-    background-position-y: -100px;
+    /*background-position-y: -100px;*/
     background-blend-mode: overlay;
     background-size: cover;
     padding: 10px;
